Fixed visible content of inactive slide.

--- a/src/assets/styles/custom.scss
+++ b/src/assets/styles/custom.scss
@@ -342,7 +342,6 @@
         .slide {
             @extend .align-content-center;
             min-height: 350px;
-            position: relative;
             width: 100%;
             z-index: 1;
 
